Added LibAFL-legacy dependency

--- a/AFLPlusPlus/CMakeLists.txt
+++ b/AFLPlusPlus/CMakeLists.txt
@@ -55,6 +55,7 @@ link_directories(AFLPlusPlus PRIVATE
 
 # Build-time dependencies for AFLPlusPlus
 target_link_libraries(AFLPlusPlus PRIVATE
+  ${VMF_INSTALL}/../../vmf/submodules/LibAFL-legacy
 )
 
 # Build-time dependencies for AFLPlusPlus
@@ -62,7 +63,6 @@ target_include_directories(AFLPlusPlus PRIVATE
   ${VMF_INSTALL}/include
   ${VMF_INSTALL}/include/vmf
   ${VMF_INSTALL}/include/plog
-  ${VMF_INSTALL}/include/LibAFL-legacy
   ${PROJECT_SOURCE_DIR}/src/module
 )
 
