--- a/AFLPlusPlus/CMakeLists.txt
+++ b/AFLPlusPlus/CMakeLists.txt
@@ -51,10 +51,12 @@ add_library(AFLPlusPlus SHARED
 
 # Build-time dependencies for AFLPlusPlus
 link_directories(AFLPlusPlus PRIVATE
+  ${VMF_INSTALL}/include/vmf/submodules/LibAFL-legacy
 )
 
 # Build-time dependencies for AFLPlusPlus
 target_link_libraries(AFLPlusPlus PRIVATE
+  ${VMF_INSTALL}/include/vmf/submodules/LibAFL-legacy
 )
 
 # Build-time dependencies for AFLPlusPlus
@@ -62,7 +64,7 @@ target_include_directories(AFLPlusPlus PRIVATE
   ${VMF_INSTALL}/include
   ${VMF_INSTALL}/include/vmf
   ${VMF_INSTALL}/include/plog
-  ${VMF_INSTALL}/../../vmf/submodules/LibAFL-legacy
+  ${VMF_INSTALL}/include/vmf/submodules/LibAFL-legacy
   ${PROJECT_SOURCE_DIR}/src/module
 )
 
