--- a/AFLPlusPlus/CMakeLists.txt
+++ b/AFLPlusPlus/CMakeLists.txt
@@ -63,6 +63,7 @@ target_include_directories(AFLPlusPlus PRIVATE
   ${VMF_INSTALL}/include
   ${VMF_INSTALL}/include/vmf
   ${VMF_INSTALL}/include/plog
+  ${VMF_INSTALL}/include/LibAFL-legacy
   ${PROJECT_SOURCE_DIR}/src/module
   /root/VaderModularFuzzer/vmf/external/bookworm/include/LibAFL-legacy
 )
