--- a/Radamsa/vmf/src/modules/CMakeLists.txt
+++ b/Radamsa/vmf/src/modules/CMakeLists.txt
@@ -41,6 +41,11 @@ add_library(Radamsa SHARED
   common/mutator/RadamsaDecrementByteMutator.cpp
   common/mutator/RadamsaRandomizeByteMutator.cpp
   common/mutator/RadamsaDeleteLineMutator.cpp
+  common/mutator/RadamsaDeleteSequentialLinesMutator.cpp
+  common/mutator/RadamsaDuplicateLineMutator.cpp
+  common/mutator/RadamsaCopyLineCloseByMutator.cpp
+  common/mutator/RadamsaRepeatLineMutator.cpp
+  common/mutator/RadamsaSwapLineMutator.cpp
 )
 
 # Build-time dependencies for Radamsa
