DeleteSequentialLines exception tests

--- a/test/unittest/CMakeLists.txt
+++ b/test/unittest/CMakeLists.txt
@@ -42,6 +42,7 @@ SET(TEST_SRCS
   ../../Radamsa/test/RadamsaRandomizeByteMutatorTest.cpp
   ../../Radamsa/test/RadamsaRepeatByteMutatorTest.cpp
   ../../Radamsa/test/RadamsaDeleteLineMutatorTest.cpp
+  ../../Radamsa/test/RadamsaDeleteSequentialLinesMutatorTest.cpp
 )
 
 add_executable(VmfTest ${TEST_SRCS})
