--- a/test/unittest/CMakeLists.txt
+++ b/test/unittest/CMakeLists.txt
@@ -46,6 +46,7 @@ SET(TEST_SRCS
   ../../Radamsa/test/RadamsaDuplicateLineMutatorTest.cpp
   ../../Radamsa/test/RadamsaCopyLineCloseByMutatorTest.cpp
   ../../Radamsa/test/RadamsaRepeatLineMutatorTest.cpp
+  ../../Radamsa/test/RadamsaSwapLineMutatorTest.cpp
 )
 
 add_executable(VmfTest ${TEST_SRCS})
