--- a/test/unittest/CMakeLists.txt
+++ b/test/unittest/CMakeLists.txt
@@ -57,6 +57,7 @@ SET(TEST_SRCS
   ../../Radamsa/test/RadamsaDuplicateNodeMutatorTest.cpp
   ../../Radamsa/test/RadamsaReplaceNodeMutatorTest.cpp
   ../../Radamsa/test/RadamsaSwapNodesMutatorTest.cpp
+  ../../Radamsa/test/RadamsaRepeatPathMutatorTest.cpp
 )
 
 add_executable(VmfTest ${TEST_SRCS})
