--- a/test/config/experimentalModules.yaml
+++ b/test/config/experimentalModules.yaml
@@ -13,36 +13,36 @@ vmfModules:
         - className: StatsOutput
   GeneticAlgorithmInputGenerator:
       children:
-        # - className: RadamsaCopyLineCloseByMutator
-        # - className: RadamsaDecrementByteMutator
-        # - className: RadamsaDeleteByteSequenceMutator
-        # - className: RadamsaDeleteLineMutator
-        # - className: RadamsaDeleteNodeMutator
-        # - className: RadamsaDeleteSequentialLinesMutator
-        # - className: RadamsaDropByteMutator
-        # - className: RadamsaDuplicateLineMutator
-        # # - className: RadamsaDuplicateNodeMutator
-        # - className: RadamsaFlipByteMutator
-        # - className: RadamsaFuseNextMutator
-        # - className: RadamsaFuseOldMutator
-        # - className: RadamsaFuseThisMutator
-        # - className: RadamsaIncrementByteMutator
-        # - className: RadamsaInsertByteMutator
-        # # - className: RadamsaInsertLineMutator
-        # - className: RadamsaInsertUnicodeMutator
-        # # - className: RadamsaModifyTextNumberMutator
-        # - className: RadamsaPermuteByteMutator
-        # # - className: RadamsaPermuteLinesMutator
-        # - className: RadamsaRandomizeByteMutator
-        # - className: RadamsaRepeatByteMutator
-        # - className: RadamsaRepeatByteSequenceMutator
-        # - className: RadamsaRepeatLineMutator
-        # # - className: RadamsaRepeatPathMutator
-        # # - className: RadamsaReplaceLineMutator
-        # # - className: RadamsaReplaceNodeMutator
-        # # - className: RadamsaSwapLineMutator
-        # # - className: RadamsaSwapNodesMutator
-        # # - className: RadamsaWidenCodePointMutator
+        - className: RadamsaCopyLineCloseByMutator
+        - className: RadamsaDecrementByteMutator
+        - className: RadamsaDeleteByteSequenceMutator
+        - className: RadamsaDeleteLineMutator
+        - className: RadamsaDeleteNodeMutator
+        - className: RadamsaDeleteSequentialLinesMutator
+        - className: RadamsaDropByteMutator
+        - className: RadamsaDuplicateLineMutator
+        - className: RadamsaDuplicateNodeMutator
+        - className: RadamsaFlipByteMutator
+        - className: RadamsaFuseNextMutator
+        - className: RadamsaFuseOldMutator
+        - className: RadamsaFuseThisMutator
+        - className: RadamsaIncrementByteMutator
+        - className: RadamsaInsertByteMutator
+        - className: RadamsaInsertLineMutator
+        - className: RadamsaInsertUnicodeMutator
+        - className: RadamsaModifyTextNumberMutator
+        - className: RadamsaPermuteByteMutator
+        - className: RadamsaPermuteLinesMutator
+        - className: RadamsaRandomizeByteMutator
+        - className: RadamsaRepeatByteMutator
+        - className: RadamsaRepeatByteSequenceMutator
+        - className: RadamsaRepeatLineMutator
+        - className: RadamsaRepeatPathMutator
+        - className: RadamsaReplaceLineMutator
+        - className: RadamsaReplaceNodeMutator
+        - className: RadamsaSwapLineMutator
+        - className: RadamsaSwapNodesMutator
+        - className: RadamsaWidenCodePointMutator
         - className: AFLCloneMutator
         - className: AFLDWordAddSubMutator
         - className: AFLDeleteMutator
